# OAI-inpainting

./: .coverage  .gitignore  .pre-commit-config.yaml  COLAB_DIAGNOSTICS_COMMANDS.md  COLAB_FIXES_2025-10-07.md  COLAB_WALKTHROUGH.md  LICENSE  Makefile  OAI_untracked_README.md  PRESENTATION_WORKFLOW.md  README.md  SETUP.md  colab_diagnostics.py  pyproject.toml  pytest.ini  requirements-dev.txt  results
.github/workflows/: ci.yml
AOT-GAN-for-Inpainting/src/: demo.py  eval.py  test.py  train.py
AOT-GAN-for-Inpainting/src/data/: dataset.py
AOT-GAN-for-Inpainting/src/loss/: common.py  loss.py
AOT-GAN-for-Inpainting/src/metric/: inception.py  metric.py
AOT-GAN-for-Inpainting/src/model/: aotgan.py  common.py
AOT-GAN-for-Inpainting/src/trainer/: trainer.py
AOT-GAN-for-Inpainting/src/utils/: option.py
ICT/: run.py
ICT/Guided_Upsample/: main.py  test.py
ICT/Guided_Upsample/config_list/: config_template.yml
ICT/Guided_Upsample/src/: Guided_Upsampler.py  config.py  dataset_my.py  degradation.py  metrics.py  models.py  networks.py  utils.py
ICT/Transformer/: DDP_trainer.py  inference.py  main.py
ICT/Transformer/datas/: dataset.py
ICT/Transformer/models/: model.py
ICT/Transformer/utils/: util.py
OAI_data/: split.py
RePaint/: README.md  download.sh  subset_4_celeba_hq_config.yml  subset_4_places2_config.yml  test.py
RePaint/LICENSES/: README.md
RePaint/conf_mgt/: conf_base.py
RePaint/guided_diffusion/: fp16_util.py  gaussian_diffusion.py  image_datasets.py  respace.py  scheduler.py  script_util.py  unet.py
RePaint/utils/: __init__.py
classifier/: resnet50.py
configs/: oai_config.yml  subset_4_config.yml
configs/aot-gan/: oai_config.yml
configs/repaint/: oai_config.yml
data/oai/: data.csv  split.py  test_split_info.csv  train_split_info.csv  valid_split_info.csv
data/oai/test/: subset_4_info.csv
data/pretrained/ict/Upsample/FFHQ/: config.yml
docker/: Dockerfile  docker-compose.yml
docs/: README.md  contributing.md  installation.md  streamlined_notebook_proposal.md  usage.md
models/aot-gan/src/: demo.py  eval.py  test.py  train.py
models/aot-gan/src/data/: __init__.py  common.py  dataset.py
models/aot-gan/src/loss/: common.py  loss.py
models/aot-gan/src/metric/: inception.py  metric.py
models/aot-gan/src/model/: aotgan.py  common.py
models/aot-gan/src/trainer/: trainer.py
models/aot-gan/src/utils/: option.py
models/ict/: README.md  run.py
models/ict/Guided_Upsample/: main.py  subset_4_config.yml  test.py
models/ict/Guided_Upsample/src/: Guided_Upsampler.py  config.py  dataset_my.py  degradation.py  loss.py  metrics.py  models.py  networks.py  utils.py
models/ict/Transformer/: DDP_trainer.py  inference.py  main.py
models/ict/Transformer/datas/: dataset.py
models/ict/Transformer/models/: model.py
models/ict/Transformer/utils/: util.py
models/ict/ckpts_ICT/Upsample/ImageNet/: config.yml
models/ict/ckpts_ICT/Upsample/Places2_Nature/: config.yml
models/repaint/: subset_4_celeba_hq_config.yml  subset_4_config.yml  subset_4_imagenet_config.yml  subset_4_places2_config.yml  test.py
models/repaint/LICENSES/: LICENSE
models/repaint/conf_mgt/: conf_base.py
models/repaint/guided_diffusion/: fp16_util.py  gaussian_diffusion.py  image_datasets.py  nn.py  respace.py  scheduler.py  script_util.py  unet.py
models/repaint/utils/: __init__.py
notebooks/: OAI_Inpainting_Colab.ipynb  OAI_Inpainting_Streamlined.ipynb  README.md  open_in_colab.html
results/: README.md
scripts/: check_mask_inversion.py  colab_classification_evaluation.py  colab_comprehensive_test.py  colab_evaluation_metrics.py  colab_pipeline.py  colab_setup_subset_4.py  create_repaint_masks.py  create_subset_4.py  evaluate.py  fix_repaint_inversion.py  fix_repaint_masked_inversion.py  generate_comparison_strips.py  generate_metrics_table.py  run_full_pipeline.py  setup_data.py  test.py  test_subset_4.py  test_subset_4_simple.py  train.py
src/: __init__.py  config.py  config_management.py  data.py  data_versioning.py  experiment_tracking.py  logging_config.py  paths.py  resnet50.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py
tests/unit/: __init__.py  test_data_processing.py  test_evaluation.py  test_model_loading.py  test_modern_features.py  test_scripts.py  test_utilities.py
utils/: __init__.py  config.py  data.py  paths.py
